// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Header component > Non-sticky header snapshot 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="
				_headerCont_63c2ea 
				_transparentHeader_63c2ea
				
			"
      >
        <div
          class="_logoCont_63c2ea _layoutWrapper_aadc39"
        >
          <a
            class="_githubLink_63c2ea"
            href="https://github.com/Dimitrije108/shopping-cart"
          >
            <img
              alt="github icon"
              src="/src/assets/github-mark-white.svg"
              title="GitHub"
              width="30"
            />
          </a>
          <h1
            class="_logoHeading_63c2ea"
            data-testid="headingLogo"
          >
            <a
              class="_logoLink_63c2ea"
              data-discover="true"
              href="/"
            >
              <img
                alt="star wars logo"
                src="/src/assets/sw-logo.png"
                width="150"
              />
            </a>
            <a
              class="_shipyardLink_63c2ea"
              data-discover="true"
              href="/"
              title="Shipyard"
            >
              <div
                class="_shipyardLogo_63c2ea"
              >
                Shipyard
              </div>
            </a>
          </h1>
          <a
            class="_cartIconLink_63c2ea"
            data-discover="true"
            data-testid="cartLink"
            href="/shopping-cart"
          >
            <img
              height="55"
              src="https://icons.iconarchive.com/icons/jonathan-rey/star-wars-vehicles/128/Death-Star-2nd-icon.png"
              title="Shopping Cart"
              width="55"
            />
            <div
              class="_cartQuantity_63c2ea"
            >
              <div
                class="_quantityWrapper_63c2ea"
              >
                2
              </div>
            </div>
          </a>
        </div>
        <nav
          class="_navbarCont_63c2ea"
        >
          <div />
          <ul
            class="_navbar_63c2ea"
          >
            <li
              class="
							_homeNav_63c2ea 
							_active_63c2ea 
						"
              data-testid="home"
            >
              <a
                data-discover="true"
                href="/"
              >
                Home
              </a>
            </li>
            <li
              class="
							_starshipsNav_63c2ea 
							 
						"
              data-testid="starships"
            >
              <a
                data-discover="true"
                href="/starships"
              >
                Starships
              </a>
              <ul
                class="
								_dropdown_63c2ea 
								
							"
                data-testid="starshipsDropdown"
              >
                <li>
                  <a
                    data-discover="true"
                    href="/starships/capital"
                  >
                    Capital
                  </a>
                </li>
                <li>
                  <a
                    data-discover="true"
                    href="/starships/transport"
                  >
                    Transport
                  </a>
                </li>
                <li>
                  <a
                    data-discover="true"
                    href="/starships/starfighter"
                  >
                    Starfighter
                  </a>
                </li>
              </ul>
            </li>
            <li
              class="
							_contactNav_63c2ea 
							 
						"
              data-testid="contact"
            >
              <a
                data-discover="true"
                href="/contact"
              >
                Contact
              </a>
            </li>
          </ul>
        </nav>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="
				_headerCont_63c2ea 
				_transparentHeader_63c2ea
				
			"
    >
      <div
        class="_logoCont_63c2ea _layoutWrapper_aadc39"
      >
        <a
          class="_githubLink_63c2ea"
          href="https://github.com/Dimitrije108/shopping-cart"
        >
          <img
            alt="github icon"
            src="/src/assets/github-mark-white.svg"
            title="GitHub"
            width="30"
          />
        </a>
        <h1
          class="_logoHeading_63c2ea"
          data-testid="headingLogo"
        >
          <a
            class="_logoLink_63c2ea"
            data-discover="true"
            href="/"
          >
            <img
              alt="star wars logo"
              src="/src/assets/sw-logo.png"
              width="150"
            />
          </a>
          <a
            class="_shipyardLink_63c2ea"
            data-discover="true"
            href="/"
            title="Shipyard"
          >
            <div
              class="_shipyardLogo_63c2ea"
            >
              Shipyard
            </div>
          </a>
        </h1>
        <a
          class="_cartIconLink_63c2ea"
          data-discover="true"
          data-testid="cartLink"
          href="/shopping-cart"
        >
          <img
            height="55"
            src="https://icons.iconarchive.com/icons/jonathan-rey/star-wars-vehicles/128/Death-Star-2nd-icon.png"
            title="Shopping Cart"
            width="55"
          />
          <div
            class="_cartQuantity_63c2ea"
          >
            <div
              class="_quantityWrapper_63c2ea"
            >
              2
            </div>
          </div>
        </a>
      </div>
      <nav
        class="_navbarCont_63c2ea"
      >
        <div />
        <ul
          class="_navbar_63c2ea"
        >
          <li
            class="
							_homeNav_63c2ea 
							_active_63c2ea 
						"
            data-testid="home"
          >
            <a
              data-discover="true"
              href="/"
            >
              Home
            </a>
          </li>
          <li
            class="
							_starshipsNav_63c2ea 
							 
						"
            data-testid="starships"
          >
            <a
              data-discover="true"
              href="/starships"
            >
              Starships
            </a>
            <ul
              class="
								_dropdown_63c2ea 
								
							"
              data-testid="starshipsDropdown"
            >
              <li>
                <a
                  data-discover="true"
                  href="/starships/capital"
                >
                  Capital
                </a>
              </li>
              <li>
                <a
                  data-discover="true"
                  href="/starships/transport"
                >
                  Transport
                </a>
              </li>
              <li>
                <a
                  data-discover="true"
                  href="/starships/starfighter"
                >
                  Starfighter
                </a>
              </li>
            </ul>
          </li>
          <li
            class="
							_contactNav_63c2ea 
							 
						"
            data-testid="contact"
          >
            <a
              data-discover="true"
              href="/contact"
            >
              Contact
            </a>
          </li>
        </ul>
      </nav>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Header component > Sticky header snapshot 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="
				_headerCont_63c2ea 
				_transparentHeader_63c2ea
				
			"
      >
        <nav
          class="_navbarCont_63c2ea _sticky_63c2ea"
          data-testid="stickyNavbar"
        >
          <a
            class="_githubLink_63c2ea _sticky_63c2ea"
            href="https://github.com/Dimitrije108/shopping-cart"
          >
            <img
              alt="github icon"
              src="/src/assets/github-mark-white.svg"
              title="GitHub"
              width="28"
            />
          </a>
          <ul
            class="_navbar_63c2ea"
          >
            <li
              class="
						_homeNav_63c2ea 
						_active_63c2ea 
					"
              data-testid="home"
            >
              <a
                data-discover="true"
                href="/"
              >
                Home
              </a>
            </li>
            <li
              class="
						_starshipsNav_63c2ea 
						 
					"
              data-testid="starships"
            >
              <a
                data-discover="true"
                href="/starships"
              >
                Starships
              </a>
              <ul
                class="
							_dropdown_63c2ea 
							_sticky_63c2ea 
							
							"
                data-testid="starshipsDropdown"
              >
                <li>
                  <a
                    data-discover="true"
                    href="/starships/capital"
                  >
                    Capital
                  </a>
                </li>
                <li>
                  <a
                    data-discover="true"
                    href="/starships/transport"
                  >
                    Transport
                  </a>
                </li>
                <li>
                  <a
                    data-discover="true"
                    href="/starships/starfighter"
                  >
                    Starfighter
                  </a>
                </li>
              </ul>
            </li>
            <li
              class="
						_contactNav_63c2ea 
						 
					"
              data-testid="contact"
            >
              <a
                data-discover="true"
                href="/contact"
              >
                Contact
              </a>
            </li>
          </ul>
          <a
            class="_cartIconLink_63c2ea _sticky_63c2ea"
            data-discover="true"
            data-testid="cartLink"
            href="/shopping-cart"
          >
            <img
              src="https://icons.iconarchive.com/icons/jonathan-rey/star-wars-vehicles/128/Death-Star-2nd-icon.png"
              title="Shopping Cart"
              width="35"
            />
            <div
              class="_cartQuantity_63c2ea"
            >
              <div
                class="_quantityWrapper_63c2ea"
              >
                2
              </div>
            </div>
          </a>
        </nav>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="
				_headerCont_63c2ea 
				_transparentHeader_63c2ea
				
			"
    >
      <nav
        class="_navbarCont_63c2ea _sticky_63c2ea"
        data-testid="stickyNavbar"
      >
        <a
          class="_githubLink_63c2ea _sticky_63c2ea"
          href="https://github.com/Dimitrije108/shopping-cart"
        >
          <img
            alt="github icon"
            src="/src/assets/github-mark-white.svg"
            title="GitHub"
            width="28"
          />
        </a>
        <ul
          class="_navbar_63c2ea"
        >
          <li
            class="
						_homeNav_63c2ea 
						_active_63c2ea 
					"
            data-testid="home"
          >
            <a
              data-discover="true"
              href="/"
            >
              Home
            </a>
          </li>
          <li
            class="
						_starshipsNav_63c2ea 
						 
					"
            data-testid="starships"
          >
            <a
              data-discover="true"
              href="/starships"
            >
              Starships
            </a>
            <ul
              class="
							_dropdown_63c2ea 
							_sticky_63c2ea 
							
							"
              data-testid="starshipsDropdown"
            >
              <li>
                <a
                  data-discover="true"
                  href="/starships/capital"
                >
                  Capital
                </a>
              </li>
              <li>
                <a
                  data-discover="true"
                  href="/starships/transport"
                >
                  Transport
                </a>
              </li>
              <li>
                <a
                  data-discover="true"
                  href="/starships/starfighter"
                >
                  Starfighter
                </a>
              </li>
            </ul>
          </li>
          <li
            class="
						_contactNav_63c2ea 
						 
					"
            data-testid="contact"
          >
            <a
              data-discover="true"
              href="/contact"
            >
              Contact
            </a>
          </li>
        </ul>
        <a
          class="_cartIconLink_63c2ea _sticky_63c2ea"
          data-discover="true"
          data-testid="cartLink"
          href="/shopping-cart"
        >
          <img
            src="https://icons.iconarchive.com/icons/jonathan-rey/star-wars-vehicles/128/Death-Star-2nd-icon.png"
            title="Shopping Cart"
            width="35"
          />
          <div
            class="_cartQuantity_63c2ea"
          >
            <div
              class="_quantityWrapper_63c2ea"
            >
              2
            </div>
          </div>
        </a>
      </nav>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
